South America done + Indochina work and misc 2018-08-25

--- a/localisation/ToR_Countries_l_english.yml
+++ b/localisation/ToR_Countries_l_english.yml
@@ -544,18 +544,15 @@ FRA_national_populist_ADJ:0 "French"
 FRA_national_populist_DEF:0 "The Commune of France"
 
 #Austria
-AUS_internationalist:0 "Austrian Workers State"
-AUS_internationalist_ADJ:0 "Austrian"
-AUS_internationalist_DEF:0 "The Austrian Workers State"
-AUS_vanguardist:0 "Austrian Workers State"
-AUS_vanguardist_ADJ:0 "Austrian"
-AUS_vanguardist_DEF:0 "The Austrian Workers State"
-AUS_collectivist:0 "Austrian Workers State"
-AUS_collectivist_ADJ:0 "Austrian"
-AUS_collectivist_DEF:0 "The Austrian Workers State"
-AUS_libertarian_socialist:0 "Socialist Republic of Austria"
-AUS_libertarian_socialist_ADJ:0 "Austrian"
-AUS_libertarian_socialist_DEF:0 "The Austrian Socialist Republic"
+AUS_vanguardist:0 "Federation of the Danube"
+AUS_vanguardist_ADJ:0 "Danubian"
+AUS_vanguardist_DEF:0 "The Federation of the Danube"
+AUS_collectivist:0 "Federation of the Danube"
+AUS_collectivist_ADJ:0 "Danubian"
+AUS_collectivist_DEF:0 "The Federation of the Danube"
+AUS_libertarian_socialist:0 "Federation of the Danube"
+AUS_libertarian_socialist_ADJ:0 "Danubian"
+AUS_libertarian_socialist_DEF:0 "Federation of the Danube"
 AUS_social_democrat:0 "United States of Greater Austria"
 AUS_social_democrat_ADJ:0 "Austrian"
 AUS_social_democrat_DEF:0 "The United States of Greater Austria"
@@ -577,9 +574,6 @@ AUS_paternal_autocrat_DEF:0 "The United States of Greater Austria"
 AUS_national_populist:0 "United States of Greater Austria"
 AUS_national_populist_ADJ:0 "Austrian"
 AUS_national_populist_DEF:0 "The United States of Greater Austria"
-AUS_revolutionary_nationalist:0 "United States of Greater Austria"
-AUS_revolutionary_nationalist_ADJ:0 "Austrian"
-AUS_revolutionary_nationalist_DEF:0 "The United States of Greater Austria"
 
 #Austrian Socialist Republic
 ASR_vanguardist:0 "Austrian Workers State"
@@ -2530,7 +2524,7 @@ TAN_revolutionary_nationalist:0 "Tuva"
 TAN_revolutionary_nationalist_ADJ:0 "Tuvan"
 TAN_revolutionary_nationalist_DEF:0 "The Tuvan People's Republic"
 
-#China-Beiyang
+#Beiyang
 BEI_internationalist:0 "Beiyang Government"
 BEI_internationalist_ADJ:0 "Chinese"
 BEI_internationalist_DEF:0 "The Beiyang Government"
@@ -2564,44 +2558,38 @@ BEI_paternal_autocrat_DEF:0 "The Beiyang Government"
 BEI_national_populist:0 "Beiyang Government"
 BEI_national_populist_ADJ:0 "Chinese"
 BEI_national_populist_DEF:0 "The Beiyang Government"
-BEI_revolutionary_nationalist:0 "Beiyang Government"
-BEI_revolutionary_nationalist_ADJ:0 "Chinese"
-BEI_revolutionary_nationalist_DEF:0 "The Beiyang Government"
 
-#China - Kuomintang
-KMT_vanguardist:0 "Chinese Soviet Republic"
-KMT_vanguardist_ADJ:0 "Chinese"
-KMT_vanguardist_DEF:0 "The Chinese Soviet Republic"
-KMT_collectivist:0 "Chinese Soviet Republic"
-KMT_collectivist_ADJ:0 "Chinese"
-KMT_collectivist_DEF:0 "The Chinese Soviet Republic"
-KMT_libertarian_socialist:0 "Chinese Soviet Republic"
-KMT_libertarian_socialist_ADJ:0 "Chinese"
-KMT_libertarian_socialist_DEF:0 "The Chinese Soviet Republic"
-KMT_social_democrat:0 "Kuomintang Government"
-KMT_social_democrat_ADJ:0 "Chinese"
-KMT_social_democrat_DEF:0 "Kuomintang Government"
-KMT_social_liberal:0 "Kuomintang Government"
-KMT_social_liberal_ADJ:0 "Chinese"
-KMT_social_liberal_DEF:0 "Kuomintang Government"
-KMT_market_liberal:0 "Kuomintang Government"
-KMT_market_liberal_ADJ:0 "Chinese"
-KMT_market_liberal_DEF:0 "Kuomintang Government"
-KMT_social_conservative:0 "Kuomintang Government"
-KMT_social_conservative_ADJ:0 "Chinese"
-KMT_social_conservative_DEF:0 "Kuomintang Government"
-KMT_authoritarian_democrat:0 "Kuomintang Government"
-KMT_authoritarian_democrat_ADJ:0 "Chinese"
-KMT_authoritarian_democrat_DEF:0 "Kuomintang Government"
-KMT_paternal_autocrat:0 "Kuomintang Government"
-KMT_paternal_autocrat_ADJ:0 "Chinese"
-KMT_paternal_autocrat_DEF:0 "The Kuomintang Government"
-KMT_national_populist:0 "Zhongguo"
-KMT_national_populist_ADJ:0 "Chinese"
-KMT_national_populist_DEF:0 "Zhongguo"
-KMT_revolutionary_nationalist:0 "Heavenly State"
-KMT_revolutionary_nationalist_ADJ:0 "Chinese"
-KMT_revolutionary_nationalist_DEF:0 "The Heavenly State of China"
+#China
+CHI_vanguardist:0 "Chinese Soviet Republic"
+CHI_vanguardist_ADJ:0 "Chinese"
+CHI_vanguardist_DEF:0 "The Chinese Soviet Republic"
+CHI_collectivist:0 "Chinese Soviet Republic"
+CHI_collectivist_ADJ:0 "Chinese"
+CHI_collectivist_DEF:0 "The Chinese Soviet Republic"
+CHI_libertarian_socialist:0 "Chinese Soviet Republic"
+CHI_libertarian_socialist_ADJ:0 "Chinese"
+CHI_libertarian_socialist_DEF:0 "The Chinese Soviet Republic"
+CHI_social_democrat:0 "Kuomintang Government"
+CHI_social_democrat_ADJ:0 "Chinese"
+CHI_social_democrat_DEF:0 "Kuomintang Government"
+CHI_social_liberal:0 "Kuomintang Government"
+CHI_social_liberal_ADJ:0 "Chinese"
+CHI_social_liberal_DEF:0 "Kuomintang Government"
+CHI_market_liberal:0 "Kuomintang Government"
+CHI_market_liberal_ADJ:0 "Chinese"
+CHI_market_liberal_DEF:0 "Kuomintang Government"
+CHI_social_conservative:0 "Kuomintang Government"
+CHI_social_conservative_ADJ:0 "Chinese"
+CHI_social_conservative_DEF:0 "Kuomintang Government"
+CHI_authoritarian_democrat:0 "Kuomintang Government"
+CHI_authoritarian_democrat_ADJ:0 "Chinese"
+CHI_authoritarian_democrat_DEF:0 "Kuomintang Government"
+CHI_paternal_autocrat:0 "Kuomintang Government"
+CHI_paternal_autocrat_ADJ:0 "Chinese"
+CHI_paternal_autocrat_DEF:0 "The Kuomintang Government"
+CHI_national_populist:0 "Zhongguo"
+CHI_national_populist_ADJ:0 "Chinese"
+CHI_national_populist_DEF:0 "Zhongguo"
 
 #Japan
 JAP_vanguardist:0 "United Japanese Communes"
@@ -2887,11 +2875,40 @@ BHU_paternal_autocrat_DEF:0 "Bhutanese"
 BHU_national_populist:0 "Bhutan"
 BHU_national_populist_ADJ:0 "Bhutanese"
 BHU_national_populist_DEF:0 "Bhutanese"
-BHU_revolutionary_nationalist:0 "Bhutan"
-BHU_revolutionary_nationalist_ADJ:0 "Bhutanese"
-BHU_revolutionary_nationalist_DEF:0 "Bhutanese"
 
-#Indochina
+#Tonkin
+TON_vanguardist:0 "Union of Tonkin"
+TON_vanguardist_ADJ:0 "Tonkinese"
+TON_vanguardist_DEF:0 "The Union of Tonkin"
+TON_collectivist:0 "Union of Tonkin"
+TON_collectivist_ADJ:0 "Tonkinese"
+TON_collectivist_DEF:0 "The Union of Tonkin"
+TON_liberatarian_socialist:0 "Commune of Tonkin"
+TON_liberatarian_socialist_ADJ:0 "Tonkinese"
+TON_liberatarian_socialist_DEF:0 "The Commune of Tonkin"
+TON_social_democrat:0 "Republic of Tonkin"
+TON_social_democrat_ADJ:0 "Tonkinese"
+TON_social_democrat_DEF:0 "The Republic of Tonkin"
+TON_social_liberal:0 "Republic of Tonkin"
+TON_social_liberal_ADJ:0 "Tonkinese"
+TON_social_liberal_DEF:0 "The Republic of Tonkin"
+TON_market_liberal:0 "Republic of Tonkin"
+TON_market_liberal_ADJ:0 "Tonkinese"
+TON_market_liberal_DEF:0 "The Republic of Tonkin"
+TON_social_conservative:0 "Republic of Tonkin"
+TON_social_conservative_ADJ:0 "Tonkinese"
+TON_social_conservative_DEF:0 "The Republic of Tonkin"
+TON_authoritarian_democrat:0 "Kingdom of Tonkin"
+TON_authoritarian_democrat_ADJ:0 "Tonkinese"
+TON_authoritarian_democrat_DEF:0 "The Kingdom of Tonkin"
+TON_paternal_autocrat:0 "State of Tonkin"
+TON_paternal_autocrat_ADJ:0 "Tonkinese"
+TON_paternal_autocrat_DEF:0 "The State of Tonkin"
+TON_national_populist:0 "State of Tonkin"
+TON_national_populist_ADJ:0 "Tonkinese"
+TON_national_populist_DEF:0 "The State of Tonkin"
+
+#Vietnam
 VIN_vanguardist:0 "Democratic Republic of Annam"
 VIN_vanguardist_ADJ:0 "Annamite"
 VIN_vanguardist_DEF:0 "The Democratic Republic of Annam"
