--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -241,10 +241,10 @@ SWE_national_populist_party_long:0 "Lindholmarna"
 #Norway
 NOR_vanguardist_party:0 "Kollektivister"
 NOR_vanguardist_party_long:0 "Norges Kollektivistiske Parti"
-NOR_collectivist_party:0 "Arbeiderpartiet"
-NOR_collectivist_party_long:0 "Arbeiderpartiet"
-NOR_libertarian_socialist_party:0 "Syndikalister"
-NOR_libertarian_socialist_party_long:0 "Norsk Syndikalistisk Forbund"
+NOR_collectivist_party:0 "Kollektivister"
+NOR_collectivist_party_long:0 "Norges Kollektivistiske Parti"
+NOR_libertarian_socialist_party:0 "Arbeiderpartiet"
+NOR_libertarian_socialist_party_long:0 "Arbeiderpartiet"
 NOR_social_democrat_party:0 "Sosialdemokrater"
 NOR_social_democrat_party_long:0 "Norges Socialdemokratiske Arbeiderparti"
 NOR_social_liberal_party:0 "Venstre"
@@ -305,10 +305,10 @@ GRE_national_populist_party:0 "Ethnikí Énosis Elládos"
 GRE_national_populist_party_long:0 "Ethnikí Énosis Elládos"
 
 #Great Britain
-ENG_vanguardist_party:0 "Collectivist Party"
-ENG_vanguardist_party_long:0 "Collectivist Party of Great Britain (National Revolutionary Wing)"
-ENG_collectivist_party:0 "Collectivist Party"
-ENG_collectivist_party_long:0 "Collectivist Party of Great Britain (Leninist Wing)"
+ENG_vanguardist_party:0 "Communist Party"
+ENG_vanguardist_party_long:0 "Communist Party of Great Britain"
+ENG_collectivist_party:0 "Communist Party"
+ENG_collectivist_party_long:0 "Communist Party of Great Britain"
 ENG_libertarian_socialist_party:0 "Independent Labour"
 ENG_libertarian_socialist_party_long:0 "Independent Labour Party"
 ENG_social_democrat_party:0 "Labour"
@@ -329,8 +329,8 @@ ENG_national_populist_party_long:0 "League of Empire Loyalists"
 #Ireland
 IRE_vanguardist_party:0 "Irish Worker League"
 IRE_vanguardist_party_long:0 "Irish Worker League"
-IRE_collectivist_party:0 "Collectivist Party"
-IRE_collectivist_party_long:0 "Collectivist Party of Ireland"
+IRE_collectivist_party:0 "Communist Party"
+IRE_collectivist_party_long:0 "Communist Party of Ireland"
 IRE_libertarian_socialist_party:0 "Trades Union Congress"
 IRE_libertarian_socialist_party_long:0 "Irish Trades Union Congress"
 IRE_social_democrat_party:0 "Sinn Fein"
@@ -351,8 +351,8 @@ IRE_national_populist_party_long:0 "National Corporate Party"
 #France
 FRA_vanguardist_party:0 "Unionistes"
 FRA_vanguardist_party_long:0 "Parti Unioniste Français"
-FRA_collectivist_party:0 "Collectivistes"
-FRA_collectivist_party_long:0 "Parti Collectiviste Français"
+FRA_collectivist_party:0 "Communistes"
+FRA_collectivist_party_long:0 "Parti Communiste  Français"
 FRA_libertarian_socialist_party:0 "Ouvriers"
 FRA_libertarian_socialist_party_long:0 "Section Française de l'Internationale Ouvrière"
 FRA_social_democrat_party:0 "Republicain-Socialistes"
@@ -594,6 +594,28 @@ AST_paternal_autocrat_party_long:0 "Australia First Movement"
 AST_national_populist_party:0 "Centre Party"
 AST_national_populist_party_long:0 "Centre Party/Australian New Guard"
 
+#British East Asia
+BAS_vanguardist_party:0 ""
+BAS_vanguardist_party_long:0 ""
+BAS_collectivist_party:0 ""
+BAS_collectivist_party_long:0 ""
+BAS_libertarian_socialist_party:0 ""
+BAS_libertarian_socialist_party_long:0 ""
+BAS_social_democrat_party:0 ""
+BAS_social_democrat_party_long:0 ""
+BAS_social_liberal_party:0 ""
+BAS_social_liberal_party_long:0 ""
+BAS_market_liberal_party:0 ""
+BAS_market_liberal_party_long:0 ""
+BAS_social_conservative_party:0 ""
+BAS_social_conservative_party_long:0 ""
+BAS_authoritarian_democrat_party:0 "Governor Commission"
+BAS_authoritarian_democrat_party_long:0 "Governor Commission"
+BAS_paternal_autocrat_party:0 "White Rajah Society"
+BAS_paternal_autocrat_party_long:0 "White Rajah Society"
+BAS_national_populist_party:0 ""
+BAS_national_populist_party_long:0 ""
+
 #New Zealand
 NZL_vanguardist_party:0 "Collectivist Party"
 NZL_vanguardist_party_long:0 "Collectivist Party of New Zealand"
@@ -704,6 +726,50 @@ RAJ_paternal_autocrat_party_long:0 "Viceroy's Executive Council"
 RAJ_national_populist_party:0 "Hindu Grand-Assembly"
 RAJ_national_populist_party_long:0 "All-India Hindu Grand-Assembly"
 
+#Tonkin
+TON_vanguardist_party:0 "Đong Duong Cong"
+TON_vanguardist_party_long:0 "Đong Duong Cong san Đang"
+TON_collectivist_party:0 "Thanh Nien"
+TON_collectivist_party_long:0 "Viet Nam Thanh Nien Cách Menh Đong Chí Hoi"
+TON_libertarian_socialist_party:0 "Hoi Kin Cao vong"
+TON_libertarian_socialist_party_long:0 "Hoi Kin Cao vong"
+TON_social_democrat_party:0 "Viet Quoc"
+TON_social_democrat_party_long:0 "Viet Nam Quoc Dan Đang"
+TON_social_liberal_party:0 "Dai Viet Dan chinh Dang"
+TON_social_liberal_party_long:0 "Dai Viet Dan chinh Dang"
+TON_market_liberal_party:0 "Dang Lap hien Dong Duong"
+TON_market_liberal_party_long:0 "Dang Lap hien Dong Duong"
+TON_social_conservative_party:0 "Dang Tien Bo"
+TON_social_conservative_party_long:0 "Dang Tien Bo"
+TON_authoritarian_democrat_party:0 "Dai Viet"
+TON_authoritarian_democrat_party_long:0 "Đai Viet Quoc Dan Dang"
+TON_paternal_autocrat_party:0 "Dai Viet"
+TON_paternal_autocrat_party_long:0 "Đai Viet Quoc Dan Dang"
+TON_national_populist_party:0 "Dai Viet"
+TON_national_populist_party_long:0 "Đai Viet Quoc Dan Dang"
+
+#Annam
+VIN_vanguardist_party:0 "Tan Viet"
+VIN_vanguardist_party_long:0 "Tan Viet Cách menh Đang"
+VIN_collectivist_party:0 "Thanh Nien"
+VIN_collectivist_party_long:0 "Viet Nam Thanh Nien Cách Menh Đong Chí Hoi"
+VIN_libertarian_socialist_party:0 "Hoi Kin Cao vong"
+VIN_libertarian_socialist_party_long:0 "Hoi Kin Cao vong"
+VIN_social_democrat_party:0 "Viet Quoc"
+VIN_social_democrat_party_long:0 "Viet Nam Quoc Dan Đang"
+VIN_social_liberal_party:0 "Dai Viet Dan chinh Dang"
+VIN_social_liberal_party_long:0 "Dai Viet Dan chinh Dang"
+VIN_market_liberal_party:0 "Dang Lap hien Dong Duong"
+VIN_market_liberal_party_long:0 "Dang Lap hien Dong Duong"
+VIN_social_conservative_party:0 "Dang Tien Bo"
+VIN_social_conservative_party_long:0 "Dang Tien Bo"
+VIN_authoritarian_democrat_party:0 "Dang Bao Hoang"
+VIN_authoritarian_democrat_party_long:0 "Dang Bao Hoang"
+VIN_paternal_autocrat_party:0 "Dang Bao Hoang"
+VIN_paternal_autocrat_party_long:0 "Dang Bao Hoang"
+VIN_national_populist_party:0 "Can Lao Dang"
+VIN_national_populist_party_long:0 "Can Lao Nhan vi Cách Mang Ðang"
+
 #Syria
 SYR_vanguardist_party:0 "Al-Hizb Al-Shuyū'ī"
 SYR_vanguardist_party_long:0 "Al-Ḥizb Al-Shuyū'ī Al-Sūrī Al-Lubnānī"
@@ -748,6 +814,28 @@ TRK_paternal_autocrat_party_long:0 "Basmachi Sodiq Partiyasi"
 TRK_national_populist_party:0 "Natsionalisty"
 TRK_national_populist_party_long:0 "Vserossiyskaya Natsionalisticheskaya Partiya"
 
+#Saudi Arabia
+SAU_vanguardist_party:0 "Alhizb Alshuyueiu Alearab"
+SAU_vanguardist_party_long:0 "Alhizb Alshuyueiu Alearab"
+SAU_collectivist_party:0 "Alhizb Alaishtirakiu Alearab"
+SAU_collectivist_party_long:0 "Alhizb Alaishtirakiu Alearab"
+SAU_libertarian_socialist_party:0 "Tahaluf Aleummal Alearab"
+SAU_libertarian_socialist_party_long:0 "Tahaluf Aleummal Alearab"
+SAU_social_democrat_party:0 "Alhizb Alaijtimaeiu"
+SAU_social_democrat_party_long:0 "Alhizb Alaijtimaeiu"
+SAU_social_liberal_party:0 "Walhuriyat Waleadala"
+SAU_social_liberal_party_long:0 "Walhuriyat Waleadala"
+SAU_market_liberal_party:0 "Hizb Hura Alearab"
+SAU_market_liberal_party_long:0 "Hizb Hura Alearab"
+SAU_social_conservative_party:0 "Hizb Altahaluf"
+SAU_social_conservative_party_long:0 "Hizb Altahaluf"
+SAU_authoritarian_democrat_party:0 "Al-Imarat Al-Arabiyah Al-Muttahidah"
+SAU_authoritarian_democrat_party_long:0 "Al-Imarat Al-Arabiyah Al-Muttahidah"
+SAU_paternal_autocrat_party:0 "Al Saud"
+SAU_paternal_autocrat_party_long:0 "Al Saud"
+SAU_national_populist_party:0 "Hizb Alearabiu"
+SAU_national_populist_party_long:0 "Hizb Alearabiu"
+
  ###############
 # North America #
  ###############
@@ -777,23 +865,23 @@ CAN_national_populist_party_long:0 "League of Empire Loyalists"
 #United States
 USA_vanguardist_party:0 "Collectivist Party USA"
 USA_vanguardist_party_long:0 "Collectivist Party of the United States of America"
-USA_collectivist_party:0 "Socialist Party"
-USA_collectivist_party_long:0 "Socialist Party of America"
-USA_libertarian_socialist_party:0 "Farmer–Labor Party"
-USA_libertarian_socialist_party_long:0 "Farmer–Labor Party"
+USA_collectivist_party:0 "Collectivist League"
+USA_collectivist_party_long:0 "Collectivist League of America"
+USA_libertarian_socialist_party:0 "Socialist Party"
+USA_libertarian_socialist_party_long:0 "Socialist Party of America"
 USA_social_democrat_party:0 "Nat. Progressive Party"
-USA_social_democrat_party_long:0 "National Progressive Party of America"
-USA_social_liberal_party:0 "Democratic Party"
-USA_social_liberal_party_long:0 "Democratic Party (Liberal Wing)"
-USA_market_liberal_party:0 "Republican Party"
-USA_market_liberal_party_long:0 "Republican Party"
+USA_social_democrat_party_long:0 "National Progressive Party"
+USA_social_liberal_party:0 "Republican Party"
+USA_social_liberal_party_long:0 "Republican Party"
+USA_market_liberal_party:0 "Democratic Party"
+USA_market_liberal_party_long:0 "Democratic Party (Moderate Wing)"
 USA_social_conservative_party:0 "Democratic Party"
 USA_social_conservative_party_long:0 "Democratic Party (Conservative Wing)"
-USA_authoritarian_democrat_party:0 "Democratic Party"
-USA_authoritarian_democrat_party_long:0 "Democratic Party (Populist Wing)"
-USA_paternal_autocrat_party:0 "Military Junta"
-USA_paternal_autocrat_party_long:0 "Military Junta"
-USA_national_populist_party:0 "Purity Party"
+USA_authoritarian_democrat_party:0 "Union Party"
+USA_authoritarian_democrat_party_long:0 "Union Party"
+USA_paternal_autocrat_party:0 "Independence Party"
+USA_paternal_autocrat_party_long:0 "Independence Party"
+USA_national_populist_party:0 "American Purity Party"
 USA_national_populist_party_long:0 "American Purity Party"
 
 #Mexico
@@ -980,6 +1068,28 @@ BRA_paternal_autocrat_party_long:0 "Partido Nacional Trabalhista"
 BRA_national_populist_party:0 "Integralistas"
 BRA_national_populist_party_long:0 "Ação Integralista Brasileira"
 
+#Chile
+CHL_vanguardist_party:0 "Colectivistas"
+CHL_vanguardist_party_long:0 "Partido Colectivista de Chile"
+CHL_collectivist_party:0 "Colectivistas"
+CHL_collectivist_party_long:0 "Partido Colectivista de Chile"
+CHL_libertarian_socialist_party:0 "Socialistas"
+CHL_libertarian_socialist_party_long:0 "Partido Socialista de Chile"
+CHL_social_democrat_party:0 "Socialistas"
+CHL_social_democrat_party_long:0 "Partido Socialista de Chile"
+CHL_social_liberal_party:0 "Radicales"
+CHL_social_liberal_party_long:0 "Partido Radical"
+CHL_market_liberal_party:0 "Liberales"
+CHL_market_liberal_party_long:0 "Partido Liberal"
+CHL_social_conservative_party:0 "Conservadores"
+CHL_social_conservative_party_long:0 "Partido Conservador"
+CHL_authoritarian_democrat_party:0 "Junta de Gobierno"
+CHL_authoritarian_democrat_party_long:0 "Junta de Gobierno"
+CHL_paternal_autocrat_party:0 "Junta Nacional"
+CHL_paternal_autocrat_party_long:0 "Junta Nacional"
+CHL_national_populist_party:0 "Nacionalistas"
+CHL_national_populist_party_long:0 "Vanguardia Popular Nacionalista"
+
 #Colombia
 COL_vanguardist_party:0 "Vanguardistas"
 COL_vanguardist_party_long:0 "Partido Colectivista Colombiano (Vanguardists)"
@@ -1001,6 +1111,28 @@ COL_paternal_autocrat_party:0 "Junta de Oficiales"
 COL_paternal_autocrat_party_long:0 "Junta de Oficiales"
 COL_national_populist_party:0 "Los Leopardos"
 COL_national_populist_party_long:0 "Los Leopardos"
+
+#Ecuador
+ECU_vanguardist_party:0 "Vanguardistas"
+ECU_vanguardist_party_long:0 "Vanguardia Socialista Ecuatoriana"
+ECU_collectivist_party:0 "Colectivistas"
+ECU_collectivist_party_long:0 "Partido Colectivista Ecuatoriano"
+ECU_libertarian_socialist_party:0 "Socialistas"
+ECU_libertarian_socialist_party_long:0 "Partido Socialista Ecuatoriano"
+ECU_social_democrat_party:0 "Liberales Socialistas"
+ECU_social_democrat_party_long:0 "Partido Liberal Radical Ecuatoriano (Socialists)"
+ECU_social_liberal_party:0 "Liberales Radicales"
+ECU_social_liberal_party_long:0 "Partido Liberal Radical Ecuatoriano (Radicals)"
+ECU_market_liberal_party:0 "Liberales"
+ECU_market_liberal_party_long:0 "Partido Liberal Radical Ecuatoriano (Liberals)"
+ECU_social_conservative_party:0 "Conservadores"
+ECU_social_conservative_party_long:0 "Partido Conservador"
+ECU_authoritarian_democrat_party:0 "Velasquistas"
+ECU_authoritarian_democrat_party_long:0 "Partido Conservador Velasquista"
+ECU_paternal_autocrat_party:0 "Obreros Nacionales"
+ECU_paternal_autocrat_party_long:0 "Compactación Obrera Nacional"
+ECU_national_populist_party:0 "Patriotas"
+ECU_national_populist_party_long:0 "Unión Patriótica Nacional"
 
 #Paraguay
 PAR_vanguardist_party:0 "Febreristas"
@@ -1045,3 +1177,47 @@ PRU_paternal_autocrat_party:0 "Línea dura del Ejército"
 PRU_paternal_autocrat_party_long:0 "Línea dura del Ejército"
 PRU_national_populist_party:0 "Revolucionarios"
 PRU_national_populist_party_long:0 "Unión Revolucionaria"
+
+#Uruguay
+URG_vanguardist_party:0 "Vanguardia"
+URG_vanguardist_party_long:0 "Partido Colectivista Vanguardia"
+URG_collectivist_party:0 "Colectivistas"
+URG_collectivist_party_long:0 "Partido Colectivista"
+URG_libertarian_socialist_party:0 "Socialistas"
+URG_libertarian_socialist_party_long:0 "Partido Socialista"
+URG_social_democrat_party:0 "Batllistas"
+URG_social_democrat_party_long:0 "Partido Colorado Batllista"
+URG_social_liberal_party:0 "Colorados"
+URG_social_liberal_party_long:0 "Partido Colorado"
+URG_market_liberal_party:0 "Nacionalistas"
+URG_market_liberal_party_long:0 "Partido Nacional"
+URG_social_conservative_party:0 "Blancos"
+URG_social_conservative_party_long:0 "Partido Nacional Blanco"
+URG_authoritarian_democrat_party:0 "Herreristas"
+URG_authoritarian_democrat_party_long:0 "Partido Nacional Herrerista"
+URG_paternal_autocrat_party:0 "Ind. Nacionalistas"
+URG_paternal_autocrat_party_long:0 "Partido Nacional Independiente"
+URG_national_populist_party:0 "Frente Unida Uruguaya"
+URG_national_populist_party_long:0 "Frente Unida Uruguaya"
+
+#Venezuela
+VEN_vanguardist_party:0 "Colectivistas"
+VEN_vanguardist_party_long:0 "Partido Colectivista de Venezuela"
+VEN_collectivist_party:0 "Izquierda"
+VEN_collectivist_party_long:0 "Agrupación Revolucionaria de Izquierda"
+VEN_libertarian_socialist_party:0 "Socialistas"
+VEN_libertarian_socialist_party_long:0 "Partido Socialista de Venezuela"
+VEN_social_democrat_party:0 "Democrátas"
+VEN_social_democrat_party_long:0 "Acción Democrática"
+VEN_social_liberal_party:0 "Demócratas Republicanos"
+VEN_social_liberal_party_long:0 "Unión Republicana Democrática"
+VEN_market_liberal_party:0 "Socialcristianos"
+VEN_market_liberal_party_long:0 "Partido Socialcristiano"
+VEN_social_conservative_party:0 "COPEI"
+VEN_social_conservative_party_long:0 "Comité de Organización Política Electoral Independiente"
+VEN_authoritarian_democrat_party:0 "Jóvenes Oficiales"
+VEN_authoritarian_democrat_party_long:0 "Junta de Jóvenes Oficiales"
+VEN_paternal_autocrat_party:0 "Junta Nacional"
+VEN_paternal_autocrat_party_long:0 "Junta Nacional Venezuelana"
+VEN_national_populist_party:0 "Libertadores"
+VEN_national_populist_party_long:0 "Movimento Libertador Nacional"
