might be the last update in a while 2018-08-26

--- a/localisation/ToR_Countries_l_english.yml
+++ b/localisation/ToR_Countries_l_english.yml
@@ -1685,15 +1685,15 @@ WAL_revolutionary_nationalist_ADJ:0 "Sheep-shaggers"
 WAL_revolutionary_nationalist_DEF:0 "The Sheep-shaggers' State"
 
 #Spanish Republic
-SPR_vanguardist:0 "Spanish People's Republic"
+SPR_vanguardist:0 "Spanish Republic"
 SPR_vanguardist_ADJ:0 "Spanish"
-SPR_vanguardist_DEF:0 "The Spanish People's Republic"
-SPR_collectivist:0 "Spanish People's Republic"
+SPR_vanguardist_DEF:0 "The Spanish Republic"
+SPR_collectivist:0 "Spanish Republic"
 SPR_collectivist_ADJ:0 "Spanish"
-SPR_collectivist_DEF:0 "The Spanish People's Republic"
-SPR_libertarian_socialist:0 "Iberian Federation"
+SPR_collectivist_DEF:0 "The Spanish Republic"
+SPR_libertarian_socialist:0 "Spanish Republic"
 SPR_libertarian_socialist_ADJ:0 "Iberian"
-SPR_libertarian_socialist_DEF:0 "The Iberian Federation"
+SPR_libertarian_socialist_DEF:0 "The Spanish Republic"
 SPR_social_democrat:0 "Spanish Republic"
 SPR_social_democrat_ADJ:0 "Spanish"
 SPR_social_democrat_DEF:0 "The Spanish Republic"
@@ -2940,7 +2940,71 @@ VIN_national_populist:0 "The Empire of Annam"
 VIN_national_populist_ADJ:0 "Annamite"
 VIN_national_populist_DEF:0 "The Empire of Annam"
 
-#Siamese
+#Cambodia
+CAM_vanguardist:0 "Kampuchea"
+CAM_vanguardist_ADJ:0 "Kampuchean"
+CAM_vanguardist_DEF:0 "Kampuchea"
+CAM_collectivist:0 "Kampuchea"
+CAM_collectivist_ADJ:0 "Kampuchean"
+CAM_collectivist_DEF:0 "Kampuchea"
+CAM_liberatarian_socialist:0 "Kampuchea"
+CAM_liberatarian_socialist_ADJ:0 "Kampuchean"
+CAM_liberatarian_socialist_DEF:0 "Kampuchea"
+CAM_social_democrat:0 "Kingdom of Cambodia"
+CAM_social_democrat_ADJ:0 "Cambodian"
+CAM_social_democrat_DEF:0 "The Kingdom of Cambodia"
+CAM_social_liberal:0 "Kingdom of Cambodia"
+CAM_social_liberal_ADJ:0 "Cambodian"
+CAM_social_liberal_DEF:0 "The Kingdom of Cambodia"
+CAM_market_liberal:0 "Kingdom of Cambodia"
+CAM_market_liberal_ADJ:0 "Cambodian"
+CAM_market_liberal_DEF:0 "The Kingdom of Cambodia"
+CAM_social_conservative:0 "Kingdom of Cambodia"
+CAM_social_conservative_ADJ:0 "Cambodian"
+CAM_social_conservative_DEF:0 "The Kingdom of Cambodia"
+CAM_authoritarian_democrat:0 "Kingdom of Cambodia"
+CAM_authoritarian_democrat_ADJ:0 "Cambodian"
+CAM_authoritarian_democrat_DEF:0 "The Kingdom of Cambodia"
+CAM_paternal_autocrat:0 "Kingdom of Cambodia"
+CAM_paternal_autocrat_ADJ:0 "Cambodian"
+CAM_paternal_autocrat_DEF:0 "The Kingdom of Cambodia"
+CAM_national_populist:0 "Khmer State"
+CAM_national_populist_ADJ:0 "Khmer"
+CAM_national_populist_DEF:0 "The Khmer State"
+
+#Laos
+LAO_vanguardist:0 "Lao People's Democratic Republic"
+LAO_vanguardist_ADJ:0 "Lao"
+LAO_vanguardist_DEF:0 "The Lao People's Democratic Republic"
+LAO_collectivist:0 "Lao Democratic Republic"
+LAO_collectivist_ADJ:0 "Lao"
+LAO_collectivist_DEF:0 "The Lao Democratic Republic"
+LAO_liberatarian_socialist:0 "Lao Commune"
+LAO_liberatarian_socialist_ADJ:0 "Lao"
+LAO_liberatarian_socialist_DEF:0 "The Lao Commune"
+LAO_social_democrat:0 "Kingdom of Laos"
+LAO_social_democrat_ADJ:0 "Lao"
+LAO_social_democrat_DEF:0 "The Kingdom of Laos"
+LAO_social_liberal:0 "Kingdom of Laos"
+LAO_social_liberal_ADJ:0 "Lao"
+LAO_social_liberal_DEF:0 "The Kingdom of Laos"
+LAO_market_liberal:0 "Kingdom of Laos"
+LAO_market_liberal_ADJ:0 "Lao"
+LAO_market_liberal_DEF:0 "The Kingdom of Laos"
+LAO_social_conservative:0 "Kingdom of Laos"
+LAO_social_conservative_ADJ:0 "Lao"
+LAO_social_conservative_DEF:0 "The Kingdom of Laos"
+LAO_authoritarian_democrat:0 "Kingdom of Laos"
+LAO_authoritarian_democrat_ADJ:0 "Lao"
+LAO_authoritarian_democrat_DEF:0 "The Kingdom of Laos"
+LAO_paternal_autocrat:0 "Kingdom of Laos"
+LAO_paternal_autocrat_ADJ:0 "Lao"
+LAO_paternal_autocrat_DEF:0 "The Kingdom of Laos"
+LAO_national_populist:0 "Kingdom of Laos"
+LAO_national_populist_ADJ:0 "Lao"
+LAO_national_populist_DEF:0 "The Kingdom of Laos"
+
+#Siam
 SIA_vanguardist:0 "Workers Siamese Commonwealth"
 SIA_vanguardist_ADJ:0 "Siamese"
 SIA_vanguardist_DEF:0 "The Siamese Commonwealth"
@@ -2971,9 +3035,6 @@ SIA_paternal_autocrat_DEF:0 "The Kingdom of Siam"
 SIA_national_populist:0 "Siamese State"
 SIA_national_populist_ADJ:0 "Siamese"
 SIA_national_populist_DEF:0 "The Siamese State"
-SIA_revolutionary_nationalist:0 "Siamese Empire"
-SIA_revolutionary_nationalist_ADJ:0 "Siamese"
-SIA_revolutionary_nationalist_DEF:0 "The Empire of Siam"
 
 #India
 RAJ_vanguardist:0 "Popular Indian State"
