--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -511,10 +511,10 @@ SPR_libertarian_socialist_party:0 "CNT-FAI"
 SPR_libertarian_socialist_party_long:0 "Confederación Nacional del Trabajo-Federación Anarquista Ibérica"
 SPR_social_democrat_party:0 "Socialistas"
 SPR_social_democrat_party_long:0 "Partido Socialista Obrero Español"
-SPR_social_liberal_party:0 "Republicanos"
-SPR_social_liberal_party_long:0 "Izquierda Republicana"
-SPR_market_liberal_party:0 "Radicales"
-SPR_market_liberal_party_long:0 "Partido Republicano Radical"
+SPR_social_liberal_party:0 "Radicales"
+SPR_social_liberal_party_long:0 "Partido Republicano Radical"
+SPR_market_liberal_party:0 "Agrarios"
+SPR_market_liberal_party_long:0 "Partido Agrario Español"
 SPR_social_conservative_party:0 "Liberales"
 SPR_social_conservative_party_long:0 "Derecha Liberal Republicana"
 SPR_authoritarian_democrat_party:0 "CEDA"
@@ -863,10 +863,10 @@ CAN_national_populist_party:0 "Loyalists"
 CAN_national_populist_party_long:0 "League of Empire Loyalists"
 
 #United States
-USA_vanguardist_party:0 "Collectivist Party USA"
-USA_vanguardist_party_long:0 "Collectivist Party of the United States of America"
-USA_collectivist_party:0 "Collectivist League"
-USA_collectivist_party_long:0 "Collectivist League of America"
+USA_vanguardist_party:0 "Communist Party USA"
+USA_vanguardist_party_long:0 "Communist Party of the United States of America"
+USA_collectivist_party:0 "Communist League"
+USA_collectivist_party_long:0 "Communist League of America"
 USA_libertarian_socialist_party:0 "Socialist Party"
 USA_libertarian_socialist_party_long:0 "Socialist Party of America"
 USA_social_democrat_party:0 "Nat. Progressive Party"
@@ -877,8 +877,8 @@ USA_market_liberal_party:0 "Democratic Party"
 USA_market_liberal_party_long:0 "Democratic Party (Moderate Wing)"
 USA_social_conservative_party:0 "Democratic Party"
 USA_social_conservative_party_long:0 "Democratic Party (Conservative Wing)"
-USA_authoritarian_democrat_party:0 "Union Party"
-USA_authoritarian_democrat_party_long:0 "Union Party"
+USA_authoritarian_democrat_party:0 "Share the Wealth Party"
+USA_authoritarian_democrat_party_long:0 "Share the Wealth Party"
 USA_paternal_autocrat_party:0 "Independence Party"
 USA_paternal_autocrat_party_long:0 "Independence Party"
 USA_national_populist_party:0 "American Purity Party"
