China work and others 2018-09-02

--- a/localisation/ToR_Countries_l_english.yml
+++ b/localisation/ToR_Countries_l_english.yml
@@ -6996,40 +6996,37 @@ GUO_revolutionary_nationalist:0 "Guominjun"
 GUO_revolutionary_nationalist_ADJ:0 "Guominjun"
 GUO_revolutionary_nationalist_DEF:0 "The Guominjun"
 
-#Guangxi Clique
-GXC_vanguardist:0 "Guangxi Clique"
+#Guangxi Clique/National Protection Government
+GXC_vanguardist:0 "National Protection Government"
 GXC_vanguardist_ADJ:0 "Guangxi"
-GXC_vanguardist_DEF:0 "The Guangxi Clique"
-GXC_collectivist:0 "Guangxi Clique"
+GXC_vanguardist_DEF:0 "The National Protection Government"
+GXC_collectivist:0 "National Protection Government"
 GXC_collectivist_ADJ:0 "Guangxi"
-GXC_collectivist_DEF:0 "The Guangxi Clique"
-GXC_libertarian_socialist:0 "Guangxi Clique"
+GXC_collectivist_DEF:0 "The National Protection Government"
+GXC_libertarian_socialist:0 "National Protection Government"
 GXC_libertarian_socialist_ADJ:0 "Guangxi"
-GXC_libertarian_socialist_DEF:0 "The Guangxi Clique"
-GXC_social_democrat:0 "Guangxi Clique"
+GXC_libertarian_socialist_DEF:0 "The National Protection Government"
+GXC_social_democrat:0 "National Protection Government"
 GXC_social_democrat_ADJ:0 "Guangxi"
-GXC_social_democrat_DEF:0 "The Guangxi Clique"
-GXC_social_liberal:0 "Guangxi Clique"
+GXC_social_democrat_DEF:0 "The National Protection Government"
+GXC_social_liberal:0 "National Protection Government"
 GXC_social_liberal_ADJ:0 "Guangxi"
-GXC_social_liberal_DEF:0 "The Guangxi Clique"
-GXC_market_liberal:0 "Guangxi Clique"
+GXC_social_liberal_DEF:0 "The National Protection Government"
+GXC_market_liberal:0 "National Protection Government"
 GXC_market_liberal_ADJ:0 "Guangxi"
-GXC_market_liberal_DEF:0 "The Guangxi Clique"
-GXC_social_conservative:0 "Guangxi Clique"
+GXC_market_liberal_DEF:0 "The National Protection Government"
+GXC_social_conservative:0 "National Protection Government"
 GXC_social_conservative_ADJ:0 "Guangxi"
-GXC_social_conservative_DEF:0 "The Guangxi Clique"
-GXC_authoritarian_democrat:0 "Guangxi Clique"
+GXC_social_conservative_DEF:0 "The National Protection Government"
+GXC_authoritarian_democrat:0 "National Protection Government"
 GXC_authoritarian_democrat_ADJ:0 "Guangxi"
-GXC_authoritarian_democrat_DEF:0 "The Guangxi Clique"
-GXC_paternal_autocrat:0 "Guangxi Clique"
+GXC_authoritarian_democrat_DEF:0 "The National Protection Government"
+GXC_paternal_autocrat:0 "National Protection Government"
 GXC_paternal_autocrat_ADJ:0 "Guangxi"
-GXC_paternal_autocrat_DEF:0 "The Guangxi Clique"
-GXC_national_populist:0 "Guangxi Clique"
+GXC_paternal_autocrat_DEF:0 "The National Protection Government"
+GXC_national_populist:0 "National Protection Government"
 GXC_national_populist_ADJ:0 "Guangxi"
-GXC_national_populist_DEF:0 "The Guangxi Clique"
-GXC_revolutionary_nationalist:0 "Guangxi Clique"
-GXC_revolutionary_nationalist_ADJ:0 "Guangxi"
-GXC_revolutionary_nationalist_DEF:0 "The Guangxi Clique"
+GXC_national_populist_DEF:0 "The National Protection Government"
 
 #Xinjiang Clique
 SIK_vanguardist:0 "Xinjiang Clique"
