--- a/localisation/ToR_Parties_l_english.yml
+++ b/localisation/ToR_Parties_l_english.yml
@@ -217,12 +217,12 @@ FIN_national_populist_party:0 "Lapuanliike"
 FIN_national_populist_party_long:0 "Lapuanliike"
 
 #Sweden
-SWE_vanguardist_party:0 "Kollektivistiska Partiet"
-SWE_vanguardist_party_long:0 "Sveriges Kollektivistiska Parti (Flyg's Faction)"
-SWE_collectivist_party:0 "Kollektivistiska Partiet"
-SWE_collectivist_party_long:0 "Sveriges Kollektivistiska Parti (Kilbom's Faction)"
-SWE_libertarian_socialist_party:0 "Kollektivistiska Partiet"
-SWE_libertarian_socialist_party_long:0 "Sveriges Kollektivistiska Parti (Höglund's Faction)"
+SWE_vanguardist_party:0 "Flygarna"
+SWE_vanguardist_party_long:0 "Socialistiska Partiet"
+SWE_collectivist_party:0 "Sillénarna"
+SWE_collectivist_party_long:0 "Sveriges Kommunistiska Parti"
+SWE_libertarian_socialist_party:0 "Kilbomarna"
+SWE_libertarian_socialist_party_long:0 "Socialistiska Partiet"
 SWE_social_democrat_party:0 "Socialdemokraterna"
 SWE_social_democrat_party_long:0 "Sveriges Socialdemokratiska Arbetareparti"
 SWE_social_liberal_party:0 "Folkpartiet"
@@ -392,28 +392,6 @@ LUX_paternal_autocrat_party_long:0 "Haus Nassau-Weilburg"
 LUX_national_populist_party:0 "Onofhängeg Nationalen"
 LUX_national_populist_party_long:0 "Onofhängeg Nationalpartei"
 
-#Germany
-GER_vanguardist_party:0 "Nationalkollektivisten"
-GER_vanguardist_party_long:0 "Nationalkollektivistische Partei"
-GER_collectivist_party:0 "Kollektivisten"
-GER_collectivist_party_long:0 "Kollektivistische Partei Deutschlands"
-GER_libertarian_socialist_party:0 "Spartakusbund"
-GER_libertarian_socialist_party_long:0 "Unabhängige Sozialdemokratische Partei Deutschlands"
-GER_social_democrat_party:0 "Sozialdemokraten"
-GER_social_democrat_party_long:0 "Sozialdemokratische Partei Deutschlands"
-GER_social_liberal_party:0 "Fortschrittliche"
-GER_social_liberal_party_long:0 "Fortschrittliche Volkspartei"
-GER_market_liberal_party:0 "Nationalliberale"
-GER_market_liberal_party_long:0 "Nationalliberale Partei"
-GER_social_conservative_party:0 "Zentrumpartei"
-GER_social_conservative_party_long:0 "Deutsche Zentrumspartei"
-GER_authoritarian_democrat_party:0 "Deutschkonservative"
-GER_authoritarian_democrat_party_long:0 "Deutschkonservative Partei"
-GER_paternal_autocrat_party:0 "Deutschnationale"
-GER_paternal_autocrat_party_long:0 "Deutschnationale Volkspartei"
-GER_national_populist_party:0 "Reichspartei"
-GER_national_populist_party_long:0 "Deutsche Reichspartei"
-
 #Russia
 RUS_vanguardist_party:0 "Narodno-Revolyutsionery"
 RUS_vanguardist_party_long:0 "Rossiyskaya Narodno-Revolyutsionnaya Partiya"
@@ -503,18 +481,18 @@ UKR_national_populist_party:0 "Natsionalisty"
 UKR_national_populist_party_long:0 "Orhanizatsiya Ukrayins'kykh Natsionalistiv"
 
 #Spanish Republic
-SPR_vanguardist_party:0 "Colectivistas"
-SPR_vanguardist_party_long:0 "Partido Colectivista de España"
-SPR_collectivist_party:0 "Colectivistas"
-SPR_collectivist_party_long:0 "Partido Colectivista de España"
+SPR_vanguardist_party:0 "Comunistas"
+SPR_vanguardist_party_long:0 "Partido Comunista de España"
+SPR_collectivist_party:0 "Frente Popular"
+SPR_collectivist_party_long:0 "Frente Popular"
 SPR_libertarian_socialist_party:0 "CNT-FAI"
 SPR_libertarian_socialist_party_long:0 "Confederación Nacional del Trabajo-Federación Anarquista Ibérica"
 SPR_social_democrat_party:0 "Socialistas"
 SPR_social_democrat_party_long:0 "Partido Socialista Obrero Español"
-SPR_social_liberal_party:0 "Radicales"
-SPR_social_liberal_party_long:0 "Partido Republicano Radical"
-SPR_market_liberal_party:0 "Agrarios"
-SPR_market_liberal_party_long:0 "Partido Agrario Español"
+SPR_social_liberal_party:0 "Republicanos"
+SPR_social_liberal_party_long:0 "Acción Republicana"
+SPR_market_liberal_party:0 "Radicales"
+SPR_market_liberal_party_long:0 "Partido Republicano Radical"
 SPR_social_conservative_party:0 "Liberales"
 SPR_social_conservative_party_long:0 "Derecha Liberal Republicana"
 SPR_authoritarian_democrat_party:0 "CEDA"
@@ -667,18 +645,18 @@ BEI_collectivist_party:0 "Communist Party"
 BEI_collectivist_party_long:0 "Zhōngguó Gòngchǎndǎng"
 BEI_libertarian_socialist_party:0 "Communist Party"
 BEI_libertarian_socialist_party_long:0 "Zhōngguó Gòngchǎndǎng"
-BEI_social_democrat_party:0 "Left-KMT"
-BEI_social_democrat_party_long:0 "Leftist Kuomintang"
-BEI_social_liberal_party:0 "Anfu Club"
-BEI_social_liberal_party_long:0 "Anfu Club"
+BEI_social_democrat_party:0 "Feng Clique"
+BEI_social_democrat_party_long:0 "Feng Yuxiang Clique"
+BEI_social_liberal_party:0 "Kuomintang"
+BEI_social_liberal_party_long:0 "Kuomintang"
 BEI_market_liberal_party:0 "Research Clique"
 BEI_market_liberal_party_long:0 "Research Clique"
-BEI_social_conservative_party:0 "Right-KMT"
-BEI_social_conservative_party_long:0 "Conservative Kuomintang"
+BEI_social_conservative_party:0 "Communications Clique"
+BEI_social_conservative_party_long:0 "Communications Clique"
 BEI_authoritarian_democrat_party:0 "Zhili Clique"
 BEI_authoritarian_democrat_party_long:0 "Zhili Clique"
-BEI_paternal_autocrat_party:0 "Fengtian Clique"
-BEI_paternal_autocrat_party_long:0 "Fengtian Clique"
+BEI_paternal_autocrat_party:0 "Wu Clique"
+BEI_paternal_autocrat_party_long:0 "Wu Peifu Clique"
 BEI_national_populist_party:0 "Young China"
 BEI_national_populist_party_long:0 "Young China Party"
 
@@ -691,16 +669,16 @@ MAN_libertarian_socialist_party:0 "Communist Party"
 MAN_libertarian_socialist_party_long:0 "Zhōngguó Gòngchǎndǎng"
 MAN_social_democrat_party:0 "Left-KMT"
 MAN_social_democrat_party_long:0 "Leftist Kuomintang"
-MAN_social_liberal_party:0 "Anfu Club"
-MAN_social_liberal_party_long:0 "Anfu Club"
+MAN_social_liberal_party:0 "Kuomintang"
+MAN_social_liberal_party_long:0 "Kuomintang"
 MAN_market_liberal_party:0 "Research Clique"
 MAN_market_liberal_party_long:0 "Research Clique"
-MAN_social_conservative_party:0 "Right-KMT"
-MAN_social_conservative_party_long:0 "Conservative Kuomintang"
-MAN_authoritarian_democrat_party:0 "Communications Clique"
-MAN_authoritarian_democrat_party_long:0 "Communications Clique"
-MAN_paternal_autocrat_party:0 "Fengtian Clique"
-MAN_paternal_autocrat_party_long:0 "Fengtian Clique"
+MAN_social_conservative_party:0 "Communications Clique"
+MAN_social_conservative_party_long:0 "Communications Clique"
+MAN_authoritarian_democrat_party:0 "Fengtian Clique"
+MAN_authoritarian_democrat_party_long:0 "Fengtian Clique"
+MAN_paternal_autocrat_party:0 "Xhang Clique"
+MAN_paternal_autocrat_party_long:0 "Xhang Zuolin Clique"
 MAN_national_populist_party:0 "Concordia Association"
 MAN_national_populist_party_long:0 "Concordia Association"
 
@@ -726,28 +704,6 @@ RAJ_paternal_autocrat_party_long:0 "Viceroy's Executive Council"
 RAJ_national_populist_party:0 "Hindu Grand-Assembly"
 RAJ_national_populist_party_long:0 "All-India Hindu Grand-Assembly"
 
-#Tonkin
-TON_vanguardist_party:0 "Đong Duong Cong"
-TON_vanguardist_party_long:0 "Đong Duong Cong san Đang"
-TON_collectivist_party:0 "Thanh Nien"
-TON_collectivist_party_long:0 "Viet Nam Thanh Nien Cách Menh Đong Chí Hoi"
-TON_libertarian_socialist_party:0 "Hoi Kin Cao vong"
-TON_libertarian_socialist_party_long:0 "Hoi Kin Cao vong"
-TON_social_democrat_party:0 "Viet Quoc"
-TON_social_democrat_party_long:0 "Viet Nam Quoc Dan Đang"
-TON_social_liberal_party:0 "Dai Viet Dan chinh Dang"
-TON_social_liberal_party_long:0 "Dai Viet Dan chinh Dang"
-TON_market_liberal_party:0 "Dang Lap hien Dong Duong"
-TON_market_liberal_party_long:0 "Dang Lap hien Dong Duong"
-TON_social_conservative_party:0 "Dang Tien Bo"
-TON_social_conservative_party_long:0 "Dang Tien Bo"
-TON_authoritarian_democrat_party:0 "Dai Viet"
-TON_authoritarian_democrat_party_long:0 "Đai Viet Quoc Dan Dang"
-TON_paternal_autocrat_party:0 "Dai Viet"
-TON_paternal_autocrat_party_long:0 "Đai Viet Quoc Dan Dang"
-TON_national_populist_party:0 "Dai Viet"
-TON_national_populist_party_long:0 "Đai Viet Quoc Dan Dang"
-
 #Annam
 VIN_vanguardist_party:0 "Tan Viet"
 VIN_vanguardist_party_long:0 "Tan Viet Cách menh Đang"
@@ -767,8 +723,8 @@ VIN_authoritarian_democrat_party:0 "Dang Bao Hoang"
 VIN_authoritarian_democrat_party_long:0 "Dang Bao Hoang"
 VIN_paternal_autocrat_party:0 "Dang Bao Hoang"
 VIN_paternal_autocrat_party_long:0 "Dang Bao Hoang"
-VIN_national_populist_party:0 "Can Lao Dang"
-VIN_national_populist_party_long:0 "Can Lao Nhan vi Cách Mang Ðang"
+VIN_national_populist_party:0 "Dai Viet"
+VIN_national_populist_party_long:0 "Đai Viet Quoc Dan Dang"
 
 #Syria
 SYR_vanguardist_party:0 "Al-Hizb Al-Shuyū'ī"
